# HealthEcho-Healthcare-Chatbot-using-Retrieval-Augmented-Generation

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  check_env.py  dummy.ipynb  project_structure_template.py  pyproject.toml  requirements.txt  setup.py  test.py  verify_ingestion.py
.github/workflows/: azure-static-web-apps-witty-field-0462fcd00.yml
backend/: Dockerfile
config/: config.yaml
docker_backend/: Dockerfile  requirements.txt
docker_frontend/: Dockerfile  index.html
exceptions/: exception.py
frontend/: Dockerfile
healthecho.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logging_module/: logger.py
src/: config.py
src/auth/: __init__.py  auth_service.py
src/cache/: redis_cache.py
src/cache_implementation/: cache_manager.py
src/chain/: __init__.py  chain_builder.py  prompt_templates.py
src/chatbot_code/: chatbot.py
src/conversation/: __init__.py  fetch_conversation.py  history_manager.py  language_detector.py  save_conversation.py
src/conversation_history/: conversation.py
src/conversations/: fetch_conversation.py  save_conversation.py
src/core/: resources.py
src/database/: __init__.py  conversation_store.py  models.py  vector_store.py
src/document_processing/: __init__.py  embedding_generator.py  file_processor.py  text_chunker.py  training_pipeline.py  version_control.py
src/speech/: __init__.py  (+2 more)
static/: styles.css
templates/: escalation_form.html  index.html
test_files/: context_builder_test.py  redis_test.py  vector_search_test.py
vectorstore/: chroma.sqlite3
(+59 files in other folders)
